<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ui.activities.LoginActivity">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="¿Olvidaste tu contraseña?"
                android:id="@+id/textView"
                android:layout_marginTop="31dp"
                android:layout_centerHorizontal="true" />



            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="142dp"
                android:layout_marginBottom="8dp"
                android:layout_below="@+id/textView">
                <EditText
                    android:id="@+id/email_user_forgot"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/email_user"
                    android:layout_alignParentStart="true" />
            </android.support.design.widget.TextInputLayout>


            <TextView
                android:id="@+id/linkSignup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_forgot"
                android:gravity="center"
                android:layout_below="@+id/textView"
                android:layout_alignParentStart="true"
                android:layout_marginTop="36dp" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/restart_password_button"
                android:onClick="SendToEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:backgroundTint="@color/colorGreenButton"
                android:textColor="@color/negro"
                android:text="@string/restart_password"
                android:layout_marginTop="52dp"
                android:layout_below="@+id/inputEmail"
                android:layout_alignParentStart="true" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>