<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ui.activities.LoginActivity">




    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView android:src="@drawable/ic_background_logo"
                android:id="@+id/imgLogo"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/version"/>

            <ProgressBar
                android:id="@+id/login_progress"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="100dp"
                android:layout_gravity="center_horizontal"
                android:visibility="gone" />

            <RelativeLayout
                android:id="@+id/login_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_progress">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="40dp"
                    android:id="@+id/inputsWrapper"
                    android:orientation="vertical"
                    android:weightSum="1">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp">
                        <EditText
                            android:id="@+id/email_user_singin"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress"
                            android:hint="@string/user_or_email" />
                    </android.support.design.widget.TextInputLayout>

                    <!-- Password Label -->
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:layout_marginBottom="8dp">
                        <EditText
                            android:id="@+id/password_user_singin"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:hint="@string/password_user"/>
                    </android.support.design.widget.TextInputLayout>

                    <TextView
                        android:id="@+id/error_login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/holo_red_light"
                        android:gravity="center"/>

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/singin_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:layout_marginBottom="24dp"
                        android:padding="12dp"
                        android:backgroundTint="@color/colorGreenButton"
                        android:text="@string/signin" />

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="172dp">

                        <android.support.v7.widget.AppCompatButton
                            android:id="@+id/link_to_signup"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="12dp"
                            android:backgroundTint="@color/com_facebook_button_login_background_color"
                            android:text="Registrate"
                            android:textColor="@color/cardview_light_background" />

                        <TextView
                            android:id="@+id/link_to_forgot"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/link_to_signup"
                            android:layout_marginTop="20dp"
                            android:textSize="20dp"
                            android:text="@string/forget"
                            android:layout_weight="0.12"
                            android:layout_centerHorizontal="true" />
                    </RelativeLayout>

                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>