<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_container_schedule"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:elevation="10dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <RelativeLayout
            android:id="@+id/rounded_date_schedule"
            android:layout_marginEnd="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/rounded_date_schedule_container"
                android:transitionName="@string/date_image_container_schedule"
                android:scaleType="centerCrop"
                android:layout_centerHorizontal="true"
                android:layout_width="80dp"
                android:layout_height="80dp" >
            </ImageView>
            <TextView
                android:id="@+id/date_container_schedule"
                android:transitionName="@string/date_text_container_schedule"
                android:scaleType="centerCrop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="90dp"
                android:gravity="center"
                android:layout_centerHorizontal="true"
                android:textColor="@color/negro_semitransparente"
                />
        </RelativeLayout>

    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/recomendation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_spetialist_suggestion"
        android:layout_below="@+id/toolbar_container_schedule"
        android:layout_alignParentStart="true"
        android:layout_marginTop="36dp" />
    <TextView
        android:id="@+id/spetialist_recomendation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Por favor coloca bien lo electrodos para que no haya inconsistencias en el estudio, procura ser cuidadoso"
        android:layout_below="@+id/recomendation"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />
    <ImageView
        android:id="@+id/image_10_20_system"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_10_20_system"
        android:layout_below="@+id/spetialist_recomendation"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/start_recording"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/image_10_20_system"
        android:text="Comenzar grabación"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>